welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:1: error: value tength is not a member of Array[Int]
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {var a = -1;for (i <- 0 to nums.tength-1) {if (T(i)==LookingFor) a=i};return a} 
                                                                                         ^indexOfValue:1: error: not found: value T
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {var a = -1;for (i <- 0 to nums.tength-1) {if (T(i)==LookingFor) a=i};return a} 
                                                                                                        ^indexOfValue:1: error: not found: value LookingFor
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {var a = -1;for (i <- 0 to nums.tength-1) {if (T(i)==LookingFor) a=i};return a} 
                                                                                                              ^