welcome.lessons.welcome.array.search.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {var a = -1;for (i <- 0 to nums.tength-1) {if (T(i)==LookingFor) a=i};return a}